feat: minor tweaks